fix: remove button jump on hover

--- a/style.css
+++ b/style.css
@@ -75,10 +75,7 @@ button:hover, .download-button:hover {
     color: #050505;
     box-shadow: 0 0 25px #00ff41;
     text-shadow: none;
-    transform: translateY(-2px);
-    margin-bottom: 2px;
 }
-
 
 a {
     color: inherit;
